Sort pages in index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Rails Textbook
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>Rails Textbook</h1>
   <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% assign sorted_posts = site.posts | sort:"date" %}
+    {% for post in sorted_posts %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
