Add github and tatsujin in the index page.

--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@ title: Rails Textbook
       <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+
+  <p>GitHub: <a href="https://github.com/igaiga/rails_textbook">rails_textbook</a></p>
+  <p>電子書籍版: <a href="http://tatsu-zine.com/books/rails-textbook">達人出版会 「Railsの教科書」</a></p>
 </div>
