--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@ title: Rails Textbook
     {% endfor %}
   </ul>
 
+  <p>誤記の修正などはGitHubにて。</p>
   <p>GitHub: <a href="https://github.com/igaiga/rails_textbook">rails_textbook</a></p>
+  <p>質問や励ましなどはtwitterにて。気軽にどうぞ。</p>
+  <p>twitter: <a href="https://twitter.com/igaiga555">@igaiga555</a></p>
   <p>電子書籍版: <a href="http://tatsu-zine.com/books/rails-textbook">達人出版会 「Railsの教科書」</a></p>
 </div>
