Add FontAwesome and Reset CSS

--- a/_figures/assets/test.html
+++ b/_figures/assets/test.html
@@ -19,6 +19,8 @@
   <h2 class="box__headline">Rails App</h2>
   <div class="box__small">
     <span class="bold">Routes</span>
+    <i class="far fa-file-code"></i>
+    routes.rb
   </div>
   <div class="box__small">
     <span class="bold">Controller</span>
