--- a/_figures/インスタンス変数を使うとビューへ情報を渡すことができる.html
+++ b/_figures/インスタンス変数を使うとビューへ情報を渡すことができる.html
@@ -12,30 +12,33 @@
   <h2 class="box__headline">リクエスト</h2>
   <ul class="box__list">
     <li class="box__item">URL：http://localhost:3000/hello/index</li>
+    <li class="box__item">HTTPメソッド：GET</li>
   </ul>
 </div>
 
 <div class="box app-box">
   <h2 class="box__headline">Rails App</h2>
   <div class="box__small">
-    <span class="bold">Routes</span>
-    <i class="far fa-file-code"></i>
-    routes.rb
+    <h3 class="box__small-headline">Routes</h3>
   </div>
   <div class="box__small">
-    <span class="bold">Controller</span>
-    ほげ
+    <h3 class="box__small-headline">Controller</h3>
+    コードを実行して@timeに代入
   </div>
-  <p>結果を渡すには〜</p>
-  <div class="box__small box__opacity">
-    <span class="bold">View</span>
-    ほげ
+  <p>
+    結果を渡すにはインスタンス変数(@はじまり)を使う
+    矢印
+  </p>
+  <div class="box__small">
+    <h3 class="box__small-headline">View</h3>
+    @timeの中身を表示する
   </div>
 </div>
 
 <div class="box">
   <h2 class="box__headline inline">レスポンス</h2>
   ：HTML
+  <img src="" alt="画像">
 </div>
 
 <div class="arrow__down position-right-top"></div>
