--- a/_figures/smallest-app/instance_variable.html
+++ b/_figures/smallest-app/instance_variable.html
@@ -2,11 +2,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>テストHTML</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <title></title>
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-<div class="wrapper relative">
+<div class="wrapper">
 
 <div class="box">
   <h2 class="box__headline">リクエスト</h2>
@@ -16,7 +16,7 @@
   </ul>
 </div>
 
-<div class="box app-box">
+<div class="box app-box relative">
   <h2 class="box__headline">Rails App</h2>
   <div class="box__small">
     <h3 class="box__small-headline">Routes</h3>
@@ -25,23 +25,24 @@
     <h3 class="box__small-headline">Controller</h3>
     コードを実行して@timeに代入
   </div>
-  <p>
+  <div class="box__no-bg">
     結果を渡すにはインスタンス変数(@はじまり)を使う
-    矢印
-  </p>
+    <div class="arrow__down is-small display-inline-block"></div>
+  </div>
   <div class="box__small">
     <h3 class="box__small-headline">View</h3>
     @timeの中身を表示する
   </div>
+
+  <div class="arrow__down arrow__position-routes"></div>
+
 </div>
 
 <div class="box">
   <h2 class="box__headline inline">レスポンス</h2>
   ：HTML
-  <img src="" alt="画像">
+  <img src="../../assets/smallest-app/time_jst.png" alt="画像" class="box__image image__helloworld">
 </div>
-
-<div class="arrow__down position-right-top"></div>
 
 </div>
 </body>
