--- a/_figures/smallest-app/rails_app_request_to_response.html
+++ b/_figures/smallest-app/rails_app_request_to_response.html
@@ -2,11 +2,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>テストHTML</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <title></title>
+  <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-<div class="wrapper relative">
+<div class="wrapper">
 
 <div class="box">
   <h2 class="box__headline">リクエスト</h2>
@@ -16,7 +16,7 @@
   </ul>
 </div>
 
-<div class="box app-box">
+<div class="box app-box relative">
   <h2 class="box__headline">Rails App</h2>
   <div class="box__small">
     <h3 class="box__small-headline">Routes</h3>
@@ -34,15 +34,15 @@
     <i class="far fa-file-alt icon__file"></i>
     hello/index.html.erb
   </div>
+
+  <div class="arrow__down arrow__position-right-top"></div>
+
 </div>
 
 <div class="box">
   <h2 class="box__headline inline">レスポンス</h2>
   ：HTML
 </div>
-
-<div class="arrow__down position-right-top"></div>
-
 </div>
 </body>
 </html>
