--- a/_figures/smallest-app/rails_app_request_to_response.html
+++ b/_figures/smallest-app/rails_app_request_to_response.html
@@ -10,9 +10,9 @@
 
 <div class="box">
   <h2 class="box__headline">リクエスト</h2>
-  <ul class="box__list">
-    <li class="box__item">URL：http://localhost:3000/hello/index</li>
-    <li class="box__item">HTTPメソッド：GET</li>
+  <ul class="list">
+    <li class="list__item">URL：http://localhost:3000/hello/index</li>
+    <li class="list__item">HTTPメソッド：GET</li>
   </ul>
 </div>
 
