Add figure samples

--- a/_figures/smallest-app/rails_app_request_to_response.html
+++ b/_figures/smallest-app/rails_app_request_to_response.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-<div class="wrapper wide">
+<div class="wrapper">
 
 <div class="box">
   <h2 class="box__headline">リクエスト</h2>
