Add figures migration1

--- a/_figures/smallest-app/routes.html
+++ b/_figures/smallest-app/routes.html
@@ -65,7 +65,7 @@ http://localhost:3000/rails/info/routes
 </div>
 
 <div class="box__no-bg text-center">
-  <div class="arrow__down is-small display-inline-block"></div>
+  <div class="arrow__down is-medium display-inline-block"></div>
 
 </div>
 
