--- a/_figures/assets/figure-sample.html
+++ b/_figures/assets/figure-sample.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>図のサンプルまとめ</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -232,7 +232,7 @@ end
       </div>
 
       <div class="box__no-bg text-center">
-        <div class="arrow__down is-small display-inline-block"></div>
+        <div class="arrow__down is-medium display-inline-block"></div>
 
       </div>
 
@@ -245,52 +245,66 @@ end
 
   <section>
     <h2>migration模式図</h2>
-    <div class="wrapper is-wide">
+    <div class="wrapper">
 
-        app/controllers/books_controller.rb
-        <div class="box code-box">
-          <div class="code">
-            <div class="code__code">
-              <pre>
-  def <span class="text__accent">create</span><!-- spanでも青くできます -->
-    @book = Book.new(book_params)
-    respond_to do |format|
-      <div class="text__accent">if @book.save</div><!-- divでも青くできます -->
-        format.html { redirect_to @book, notice: 'Book was successfully created.' }
-        format.json { render :show, status: :created, location: @book }
-      else
-        format.html { render :new }
-        format.json { render json: @book.errors, status: :unprocessable_entity }
-      end
+      <div class="command">
+        $ rails g scaffold book title:string memo:text
+      </div>
+      <div class="box__flex is-large">
+        <div class="box__flex-column">
+          <div class="box__no-bg">
+            <div class="arrow__down is-medium display-inline-block"></div>
+          </div>
+        </div>
+        <div class="box__flex-column is-minus-margin">
+          ファイル生成
+        </div>
+      </div>
+      <div class="text__path">
+        db/migrate/20160214232240_create_books.rb
+      </div>
+      <div class="box code-box">
+        <div class="code">
+          <div class="code__code">
+<pre>
+class CreateBooks < ActiveRecord::Migration[5.1]
+  def change
+    create_table :books do |t|
+      t.string :title
+      t.text :memo
+
+      t.timestamps
     end
   end
-  </pre>
-            </div>
-            <div class="code__text">
-              <ul class="code__description-list">
-                <li class="code__description-item"></li>
-                <li class="code__description-item">
-                  <span class="bold">1. リクエストのパラメータを使って本のデータを作る</span>
-                </li>
-                <li class="code__description-item">
-                  <span class="bold">2. 本のデータを保存する</span>
-                </li>
-                <li class="code__description-item">
-                  <span class="bold">3a. 成功したらshow画面へ</span>
-                </li>
-                <li class="code__description-item"></li>
-                <li class="code__description-item"></li>
-                <li class="code__description-item"></li>
-                <li class="code__description-item">
-                  <span class="bold">3b. 保存失敗したらnew画面へ (さっきの画面)</span>
-                </li>
-              </ul>
+end
+</pre>
             </div>
           </div>
         </div>
-  
-      </div>
-    </section>
+        <div class="box__flex is-large">
+          <div class="box__flex-column">
+            <div class="box__no-bg">
+              <div class="arrow__down is-medium display-inline-block"></div>
+            </div>
+          </div>
+          <div class="box__flex-column is-command">
+            <div class="command">
+              $ rails db:migrate
+            </div>
+            <div class="command__no-bg">
+              migrationファイル(DB設計図)からDBを作る
+            </div>
+          </div>
+        </div>
+        <div class="db is-large">
+          <h3 class="box__small-headline">DB</h3>
+          <p class="db__text-small">
+            booksテーブル<br>
+            title, memo, created_at, updated_at
+          </p>
+        </div>
+    </div>
+  </section>
 
   <section>
     <h2>画面遷移図</h2>
