--- a/_figures/assets/model/migration_summary.html
+++ b/_figures/assets/model/migration_summary.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title></title>
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <div class="wrapper">
@@ -13,11 +13,11 @@
   </div>
   <div class="box__flex is-large">
     <div class="box__flex-column">
-      <div class="box__no-bg">
-        <div class="arrow__down is-medium display-inline-block"></div>
+      <div class="arrow__box">
+        <div class="arrow arrow__box-arrow display-inline-block"></div>
       </div>
     </div>
-    <div class="box__flex-column is-minus-margin">
+    <div class="box__flex-column">
       ファイル生成
     </div>
   </div>
@@ -46,8 +46,8 @@ end
   </div>
   <div class="box__flex is-large">
     <div class="box__flex-column">
-      <div class="box__no-bg">
-        <div class="arrow__down is-medium display-inline-block"></div>
+      <div class="arrow__box">
+        <div class="arrow arrow__box-arrow display-inline-block"></div>
       </div>
     </div>
     <div class="box__flex-column is-command">
