--- a/_figures/assets/new-create/create-flow-controller.html
+++ b/_figures/assets/new-create/create-flow-controller.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title></title>
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <div class="wrapper">
@@ -40,7 +40,7 @@
     ？
   </div>
 
-  <div class="arrow__down arrow__position-right-top"></div>
+  <div class="arrow arrow__position-right-top"></div>
 
 </div>
 
