--- a/_figures/assets/figure-sample.html
+++ b/_figures/assets/figure-sample.html
@@ -35,7 +35,7 @@
         </div>
         <div class="box__no-bg">
           【ダミー】ここにもテキスト入れられます
-          <div class="arrow__down is-small display-inline-block"></div>
+          <div class="arrow is-small display-inline-block"></div>
         </div>
         <div class="box__small">
           <h3 class="box__small-headline">View</h3>
@@ -43,9 +43,9 @@
           hello/index.html.erb
         </div>
 
-        <div class="arrow__down arrow__position-right-top"></div>
+        <div class="arrow arrow__position-right-top"></div>
         <!-- Routesからの矢印にしたい場合は以下 -->
-        <!-- <div class="arrow__down arrow__position-routes"></div> -->
+        <!-- <div class="arrow arrow__position-routes"></div> -->
 
       </div>
 
@@ -174,7 +174,7 @@ end
     <h2>Routes</h2>
     <div class="wrapper">
 
-      http://localhost:3000/rails/info/routes
+      <div class="text__path">http://localhost:3000/rails/info/routes</div>
       <table id='route_table' class='route_table with-margin'>
         <thead>
           <tr>
@@ -231,8 +231,8 @@ end
         </ul>
       </div>
 
-      <div class="box__no-bg text-center">
-        <div class="arrow__down is-medium display-inline-block"></div>
+      <div class="arrow__box text-center">
+        <div class="arrow arrow__box-arrow display-inline-block"></div>
 
       </div>
 
@@ -252,11 +252,11 @@ end
       </div>
       <div class="box__flex is-large">
         <div class="box__flex-column">
-          <div class="box__no-bg">
-            <div class="arrow__down is-medium display-inline-block"></div>
+          <div class="arrow__box">
+            <div class="arrow arrow__box-arrow display-inline-block"></div>
           </div>
         </div>
-        <div class="box__flex-column is-minus-margin">
+        <div class="box__flex-column">
           ファイル生成
         </div>
       </div>
@@ -283,8 +283,8 @@ end
         </div>
         <div class="box__flex is-large">
           <div class="box__flex-column">
-            <div class="box__no-bg">
-              <div class="arrow__down is-medium display-inline-block"></div>
+            <div class="arrow__box">
+              <div class="arrow arrow__box-arrow display-inline-block"></div>
             </div>
           </div>
           <div class="box__flex-column is-command">
@@ -303,6 +303,101 @@ end
             title, memo, created_at, updated_at
           </p>
         </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>migration その2</h2>
+    <div class="wrapper is-wide">
+
+      <div class="command">
+        $ rails g scaffold book title:string memo:text
+      </div>
+      <div class="box__flex is-align-top">
+        <div class="box__flex-column-half">
+          <div class="box__flex">
+            <div class="box__flex-column">
+              <div class="arrow__box" style="height: 420px"><!-- 高さの決め打ち。特例措置 -->
+                <div class="arrow arrow__box-arrow display-inline-block"></div>
+              </div>
+            </div>
+            <div class="box__flex-column">
+              ファイル生成
+            </div>
+          </div>
+          <div class="text__path">
+            <span class="bold">modelファイル</span><br>
+            app/models/book.rb
+          </div>
+          <div class="box code-box">
+            <div class="code">
+              <div class="code__code">
+<pre>
+class Book < ApplicationRecord
+end
+</pre>
+              </div>
+            </div>
+          </div>
+    
+        </div>
+        <div class="box__flex-column-half">
+          <div class="box__flex">
+            <div class="box__flex-column">
+              <div class="arrow__box">
+                <div class="arrow arrow__box-arrow display-inline-block"></div>
+              </div>
+            </div>
+            <div class="box__flex-column">
+              ファイル生成
+            </div>
+          </div>
+          <div class="text__path">
+            db/migrate/20160214232240_create_books.rb
+          </div>
+          <div class="box code-box">
+            <div class="code">
+              <div class="code__code">
+<pre>
+class CreateBooks < ActiveRecord::Migration[5.1]
+  def change
+    create_table :books do |t|
+      t.string :title
+      t.text :memo
+
+      t.timestamps
+    end
+  end
+end
+</pre>
+              </div>
+            </div>
+          </div>
+          <div class="box__flex">
+            <div class="box__flex-column">
+              <div class="arrow__box">
+                <div class="arrow arrow__box-arrow display-inline-block"></div>
+              </div>
+            </div>
+            <div class="box__flex-column is-command">
+              <div class="command">
+                $ rails db:migrate
+              </div>
+              <div class="command__no-bg">
+                migrationファイル(DB設計図)からDBを作る
+              </div>
+            </div>
+          </div>
+          <div class="db">
+            <h3 class="db__headline">DB</h3>
+            <p class="db__text-small">
+              booksテーブル<br>
+              title, memo, created_at, updated_at
+            </p>
+          </div>
+        </div>
+      </div>
+    
     </div>
   </section>
 
