--- a/_figures/assets/smallest-app/instance_variable.html
+++ b/_figures/assets/smallest-app/instance_variable.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title></title>
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <div class="wrapper">
@@ -25,23 +25,23 @@
     <h3 class="box__small-headline">Controller</h3>
     コードを実行して@timeに代入
   </div>
-  <div class="box__no-bg">
+  <div class="arrow__box">
     結果を渡すにはインスタンス変数(@はじまり)を使う
-    <div class="arrow__down is-small display-inline-block"></div>
+    <div class="arrow is-small display-inline-block"></div>
   </div>
   <div class="box__small">
     <h3 class="box__small-headline">View</h3>
     @timeの中身を表示する
   </div>
 
-  <div class="arrow__down arrow__position-routes"></div>
+  <div class="arrow arrow__position-routes"></div>
 
 </div>
 
 <div class="box">
   <h2 class="box__headline inline">レスポンス</h2>
   ：HTML
-  <img src="../../assets/smallest-app/time_jst.png" alt="画像" class="box__image image__helloworld">
+  <img src="../img/time_jst.png" alt="画像" class="box__image image__helloworld">
 </div>
 
 </div>
