--- a/_figures/assets/smallest-app/routes.html
+++ b/_figures/assets/smallest-app/routes.html
@@ -3,12 +3,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title></title>
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <div class="wrapper">
 
-http://localhost:3000/rails/info/routes
+<div class="text__path">http://localhost:3000/rails/info/routes</div>
 <table id='route_table' class='route_table with-margin'>
   <thead>
     <tr>
@@ -64,8 +64,8 @@ http://localhost:3000/rails/info/routes
   </ul>
 </div>
 
-<div class="box__no-bg text-center">
-  <div class="arrow__down is-medium display-inline-block"></div>
+<div class="arrow__box text-center">
+  <div class="arrow arrow__box-arrow display-inline-block"></div>
 
 </div>
 
