fix classname box

--- a/_figures/assets/smallest-app/instance_variable.html
+++ b/_figures/assets/smallest-app/instance_variable.html
@@ -25,7 +25,7 @@
     <h3 class="box__small-headline">Controller</h3>
     コードを実行して@timeに代入
   </div>
-  <div class="arrow__box">
+  <div class="box__no-bg">
     結果を渡すにはインスタンス変数(@はじまり)を使う
     <div class="arrow is-small display-inline-block"></div>
   </div>
