--- a/_figures/assets/smallest-app/routes_mapping.html
+++ b/_figures/assets/smallest-app/routes_mapping.html
@@ -16,7 +16,7 @@
   </ul>
 </div>
 
-<div class="arrow__box">
+<div class="box__no-bg">
   <div class="arrow is-small display-inline-block"></div>
   routesが持っている対応表を見て呼び出すアクションを決定
 </div>
