WIP Add figure crud sample
- ボックスを角丸枠線ありにする案
- 書体をCatalinaでの明朝表示を防ぐ

--- a/_figures/assets/figure-sample.html
+++ b/_figures/assets/figure-sample.html
@@ -403,6 +403,45 @@ end
 
   <section>
     <h2>画面遷移図</h2>
+
+    <div class="wrapper is-wide">
+      <div class="crud">
+        <div class="crud__item">
+          <div class="box crud-box">
+            <h2 class="crud__headline">index</h2>
+            <div class="crud__text">
+              一覧
+            </div>
+            <img src="" class="crud__image">
+          </div>
+        </div>
+        <div class="crud__item">
+          <div class="box crud-box">
+            <h2 class="crud__headline">new</h2>
+            <div class="crud__text">
+              新規入力
+            </div>
+          </div>
+        </div>
+        <div class="crud__item">
+          <div class="box crud-box">
+            <h2 class="crud__headline">edit</h2>
+            <div class="crud__text">
+              編集
+            </div>
+          </div>
+        </div>
+        <div class="crud__item">
+          <div class="box crud-box">
+            <h2 class="crud__headline">show</h2>
+            <div class="crud__text">
+              一覧
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </section>
 
   <section>
