Fix figure formのコードと表示の対応図

--- a/_figures/assets/figure-sample.html
+++ b/_figures/assets/figure-sample.html
@@ -445,14 +445,14 @@ end
   <section>
     <h2>formのコードと表示の対応図</h2>
     <!-- new-view-form.html -->
-    <div class="wrapper is-wide">
+    <div class="wrapper is-wide relative">
 
       <div class="box__flex is-align-top">
         <div class="box__flex-column-half">
           <div class="text__path">app/views/books/_form.html.erb</div>
             <div class="box code-box">
 <pre>
-<%= form_with(model: book,<br> local: true) do |form| %>
+<div class="code__block is-margin-zero is-accent-color"><%= form_with(model: book,<br> local: true) do |form| %>
 <div class="code__block">  &lt;div class="field"&gt;
     <%= form.label :title %>
     <%= form.text_field :title %>
@@ -465,24 +465,33 @@ end
     <%= form.submit %>
   &lt;/div&gt;
 </div><% end %>
-</pre>
+</div></pre>
           </div>
         </div>
         <div class="box__flex-column-half">
-          <img src="./img/img_form_headline.png" width="380" class="form__image">
-          <div class="code__block">
-            <img src="./img/img_form_title.png" width="380" class="form__image">
+          <div class="code__block-border-none">
+            <img src="./img/img_form_headline.png" class="form__image">
           </div>
-          <div class="code__block">
-            <img src="./img/img_form_memo.png" width="380" class="form__image">
+          <div class="code__block is-accent-color">
+            <div class="code__block">
+              <img src="./img/img_form_title.png" class="form__image">
+            </div>
+            <div class="code__block">
+              <img src="./img/img_form_memo.png" class="form__image">
+            </div>
+            <div class="code__block is-inline-block is-margin-bottom">
+              <img src="./img/img_form_button.png" width="106" class="form__image">
+            </div>
           </div>
-          <div class="code__block is-inline-block">
-            <img src="./img/img_form_button.png" width="106" class="form__image">
+          <div class="code__block-border-none">
+            <img src="./img/img_form_back.png" class="form__image">
           </div>
-          <img src="./img/img_form_back.png" width="380" class="form__image">
         </div>
       </div>
 
+      <div class="arrow-right arrow-right__position" style="top: 100px;"></div>
+      <div class="arrow-right arrow-right__position" style="top: 230px;"></div>
+      <div class="arrow-right arrow-right__position" style="top: 356px;"></div>
     </div>
   </section>
   
