--- a/_figures/assets/new-create/new-view-form-title-html.html
+++ b/_figures/assets/new-create/new-view-form-title-html.html
@@ -14,7 +14,7 @@
       <div class="box code-box">
 <pre>
 <%= form_with(model: book,<br> local: true) do <span class="text__accent">|form|</span> %>
-<div class="code__block">  &lt;div class="field"&gt;
+<div class="form__block is-title">  &lt;div class="field"&gt;
     <%= <span class="text__accent">form.label :title</span> %>
     <%= <span class="text__accent">form.text_field :title</span> %>
   &lt;/div&gt;
@@ -22,16 +22,16 @@
     </div>
   </div>
   <div class="box__flex-column-half" style="padding-top: 71px;">
-    <div class="code__block-border-none-2">
+    <div class="form__block-border-none-2">
       <img src="../img/img_form_headline.png" class="form__image">
     </div>
-    <div class="code__block">
+    <div class="form__block is-title">
       <img src="../img/img_form_title.png" class="form__image">
     </div>
 </div>
 
-<div class="arrow-right is-small arrow-right__position" style="top: 137px;margin-left: -39px;"></div>
-<div class="arrow-right is-small arrow-right__position" style="top: 164px;margin-left: -25px;"></div>
+<div class="arrow-right is-title is-small arrow-right__position" style="top: 137px;margin-left: -39px;"></div>
+<div class="arrow-right is-title is-small arrow-right__position" style="top: 164px;margin-left: -25px;"></div>
 
 </div>
 </body>
