--- a/_figures/assets/new-create/new-view-form.html
+++ b/_figures/assets/new-create/new-view-form.html
@@ -9,7 +9,7 @@
 <div class="wrapper is-wide relative">
 
 <div class="box__flex is-align-top">
-    <div class="box__flex-column-half">
+    <div class="box__flex-column size-50">
       <div class="text__path">app/views/books/_form.html.erb</div>
         <div class="box code-box">
 <pre>
@@ -29,7 +29,7 @@
 </div></pre>
     </div>
   </div>
-  <div class="box__flex-column-half">
+  <div class="box__flex-column size-50">
     <div class="form__block-border-none">
       <img src="../img/img_form_headline.png" class="form__image">
     </div>
