--- a/_figures/assets/figure-sample.html
+++ b/_figures/assets/figure-sample.html
@@ -314,7 +314,7 @@ end
         $ rails g scaffold book title:string memo:text
       </div>
       <div class="box__flex is-align-top">
-        <div class="box__flex-column-half">
+        <div class="box__flex-column">
           <div class="box__flex">
             <div class="box__flex-column">
               <div class="arrow__box" style="height: 420px"><!-- 高さの決め打ち。特例措置 -->
@@ -341,7 +341,7 @@ end
           </div>
     
         </div>
-        <div class="box__flex-column-half">
+        <div class="box__flex-column">
           <div class="box__flex">
             <div class="box__flex-column">
               <div class="arrow__box">
@@ -448,7 +448,7 @@ end
     <div class="wrapper is-wide relative">
 
       <div class="box__flex is-align-top">
-        <div class="box__flex-column-half">
+        <div class="box__flex-column size-50">
           <div class="text__path">app/views/books/_form.html.erb</div>
             <div class="box code-box">
 <pre>
@@ -468,7 +468,7 @@ end
 </div></pre>
           </div>
         </div>
-        <div class="box__flex-column-half">
+        <div class="box__flex-column size-50">
           <div class="form__block-border-none">
             <img src="./img/img_form_headline.png" class="form__image">
           </div>
