--- a/_figures/assets/model/summary_scaffold_make_files.html
+++ b/_figures/assets/model/summary_scaffold_make_files.html
@@ -12,7 +12,7 @@
     $ rails g scaffold book title:string memo:text
   </div>
   <div class="box__flex is-align-top">
-      <div class="box__flex-column-half">
+      <div class="box__flex-column">
         <div class="box__flex">
           <div class="box__flex-column">
             <div class="arrow__box" style="height: 420px"><!-- 高さの決め打ち。特例措置 -->
@@ -39,7 +39,7 @@ end
         </div>
   
       </div>
-      <div class="box__flex-column-half">
+      <div class="box__flex-column">
         <div class="box__flex">
           <div class="box__flex-column">
             <div class="arrow__box">
