Adopting figures in smallest-app

--- a/_figures/assets/smallest-app/routes_mapping.html
+++ b/_figures/assets/smallest-app/routes_mapping.html
@@ -18,11 +18,11 @@
 
 <div class="box__no-bg">
   <div class="arrow is-small display-inline-block"></div>
-  routesが持っている対応表を見て呼び出すアクションを決定
+  routesはリクエストのURLとHTTPメソッドに応じて次の処理先を決める
 </div>
 
 <div class="box__small">
-  HelloControllerのindexアクション
+  ○○コントローラ の □□アクション
 </div>
 
 </div>
