Replace :html to list element in figures

--- a/_figures/assets/CRUD/index_flow_routes.html
+++ b/_figures/assets/CRUD/index_flow_routes.html
@@ -40,7 +40,9 @@
 
 <div class="box opacity">
   <h2 class="box__headline inline">レスポンス</h2>
-  ：HTML
+  <ul class="list">
+    <li class="list__item">HTML</li>
+  </ul>
 </div>
 </div>
 </body>
