--- a/_figures/assets/smallest-app/instance_variable.html
+++ b/_figures/assets/smallest-app/instance_variable.html
@@ -40,7 +40,9 @@
 
 <div class="box">
   <h2 class="box__headline inline">レスポンス</h2>
-  ：HTML
+  <ul class="list">
+    <li class="list__item">HTML</li>
+  </ul>
   <img src="../img/time_jst.png" alt="画像" class="box__image image__helloworld">
 </div>
 
