--- a/_figures/assets/smallest-app/rails_app_request_to_response.html
+++ b/_figures/assets/smallest-app/rails_app_request_to_response.html
@@ -41,7 +41,9 @@
 
 <div class="box">
   <h2 class="box__headline inline">レスポンス</h2>
-  ：HTML
+  <ul class="list">
+    <li class="list__item">HTML</li>
+  </ul>
 </div>
 </div>
 </body>
