Fix margin in request and response figures

--- a/_figures/assets/figure-sample.html
+++ b/_figures/assets/figure-sample.html
@@ -238,7 +238,7 @@ end
 
       </div>
 
-      <div class="box__small">
+      <div class="box__small with-margin">
         HelloControllerのindexアクション
       </div>
 
