--- a/_figures/assets/smallest-app/instance_variable.html
+++ b/_figures/assets/smallest-app/instance_variable.html
@@ -43,7 +43,7 @@
   <ul class="list">
     <li class="list__item">HTML</li>
   </ul>
-  <img src="../img/time_jst.png" alt="画像" class="box__image image__helloworld">
+  <img src="../img/time_jst.png" alt="画像" width="200" class="box__image is-helloworld">
 </div>
 
 </div>
