--- a/_figures/assets/smallest-app/routes_mapping.html
+++ b/_figures/assets/smallest-app/routes_mapping.html
@@ -21,7 +21,7 @@
   routesはリクエストのURLとHTTPメソッドに応じて次の処理先を決める
 </div>
 
-<div class="box__small">
+<div class="box__small with-margin">
   ○○コントローラ の □□アクション
 </div>
 
