--- a/_figures/assets/new-create/new_view_form_title_html.html
+++ b/_figures/assets/new-create/new_view_form_title_html.html
@@ -18,7 +18,8 @@
     <%= <span class="text__accent">form.label :title</span> %>
     <%= <span class="text__accent">form.text_field :title</span> %>
   &lt;/div&gt;
-</div>...</pre>
+</div>...
+</pre>
     </div>
   </div>
   <div class="box__flex-column size-50" style="padding-top: 71px;">
