Replace figures in create

--- a/_figures/assets/new-create/create_flow_controller.html
+++ b/_figures/assets/new-create/create_flow_controller.html
@@ -15,8 +15,8 @@
     <li class="list__item">HTTPメソッド：GET</li>
     <li class="list__item">パラメータ(Form data)：
       <ul class="list">
-        <li class="list__item">book[title] : 大東京トイボックス</li>
-        <li class="list__item">book[memo] : ゲーム開発会社を舞台にした熱血ストーリー</li>
+        <li class="list__item">book[title] : RubyとRailsの学習ガイド</li>
+        <li class="list__item">book[memo] : Rails関連技術地図とそれらの学習資料の紹介</li>
       </ul>
     </li>
   </ul>
