--- a/_figures/assets/model/summary_scaffold_make_files.html
+++ b/_figures/assets/model/summary_scaffold_make_files.html
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="text__path">
-          <span class="bold">modelファイル</span><br>
+          <span class="bold">モデルファイル</span><br>
           app/models/book.rb
         </div>
         <div class="box code-box">
@@ -51,7 +51,7 @@ end
           </div>
         </div>
         <div class="text__path">
-          db/migrate/20191017231132_create_books.rb
+          db/migrate/20191008234834_create_books.rb
         </div>
         <div class="box code-box">
           <div class="code">
