Treat figure in model

--- a/_figures/assets/model/migration_new_column_author.html
+++ b/_figures/assets/model/migration_new_column_author.html
@@ -43,8 +43,8 @@ end
     <div class="box__flex-column is-left-margin">
       <i class="far fa-hand-point-left"></i>
       生成されたmigrationファイルには<br>
-      booksテーブルへauthorをstring型で追加<br>
-      する指示が書かれている
+      booksテーブルへauthorをstring型で<br>
+      追加する指示が書かれている
     </div>
   </div>
   <div class="box__flex is-large">
