--- a/_figures/assets/new-create/create_flow_routes.html
+++ b/_figures/assets/new-create/create_flow_routes.html
@@ -12,7 +12,7 @@
   <h2 class="box__headline">リクエスト</h2>
   <ul class="list">
     <li class="list__item">URL：http://localhost:3000/books</li>
-    <li class="list__item">HTTPメソッド：GET</li>
+    <li class="list__item">HTTPメソッド：POST</li>
     <li class="list__item">パラメータ(Form data)：
       <ul class="list">
         <li class="list__item">book[title] : RubyとRailsの学習ガイド</li>
