--- a/_figures/assets/CRUD/index_flow_view.html
+++ b/_figures/assets/CRUD/index_flow_view.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="box opacity">
-  <h2 class="box__headline inline">レスポンス</h2>
+  <h2 class="box__headline">レスポンス</h2>
   <ul class="list">
     <li class="list__item">HTML</li>
   </ul>
