Change screenshots in _figures/assets/CRUD/crud_4_pages.html

--- a/_figures/assets/CRUD/crud_4_pages.html
+++ b/_figures/assets/CRUD/crud_4_pages.html
@@ -14,31 +14,28 @@
     <div class="crud__text">
       一覧
     </div>
-    <img src="../../CRUD/index_ss.png" class="crud__image">
+    <img src="crud_4_pages/books_index_data_2.png" class="crud__image">
   </div>
   <div class="crud__box">
     <h2 class="crud__headline">new</h2>
     <div class="crud__text">
       新規入力
     </div>
-    <!-- 画像ダミーです -->
-    <img src="../../CRUD/index_ss.png" class="crud__image">
+    <img src="crud_4_pages/books_new_data_1.png" class="crud__image">
   </div>
   <div class="crud__box">
     <h2 class="crud__headline">edit</h2>
     <div class="crud__text">
       編集
     </div>
-    <!-- 画像ダミーです -->
-    <img src="../../CRUD/index_ss.png" class="crud__image">
+    <img src="crud_4_pages/books_edit_data_1.png" class="crud__image">
   </div>
   <div class="crud__box">
     <h2 class="crud__headline">show</h2>
     <div class="crud__text">
-      一覧
+      詳細
     </div>
-    <!-- 画像ダミーです -->
-    <img src="../../CRUD/index_ss.png" class="crud__image">
+    <img src="crud_4_pages/books_show_data_1.png" class="crud__image">
   </div>
 </div>
 
