Add column layout for crud_4_pages.html

--- a/_figures/assets/CRUD/crud_4_pages.html
+++ b/_figures/assets/CRUD/crud_4_pages.html
@@ -16,19 +16,27 @@
     </div>
     <img src="crud_4_pages/books_index_data_2.png" class="crud__image">
   </div>
-  <div class="crud__box">
-    <h2 class="crud__headline">new</h2>
-    <div class="crud__text">
-      新規入力
+  <div class="crud__box is-column">
+    <div class="crud__box-text">
+      <h2 class="crud__headline">new</h2>
+      <div class="crud__text">
+        新規入力
+      </div>
     </div>
-    <img src="crud_4_pages/books_new_data_1.png" class="crud__image">
+    <div class="crud__box-image">
+      <img src="crud_4_pages/books_new_data_1.png" class="crud__image">
+    </div>
   </div>
-  <div class="crud__box">
-    <h2 class="crud__headline">edit</h2>
-    <div class="crud__text">
-      編集
+  <div class="crud__box is-column">
+    <div class="crud__box-text">
+      <h2 class="crud__headline">edit</h2>
+      <div class="crud__text">
+        編集
+      </div>
     </div>
-    <img src="crud_4_pages/books_edit_data_1.png" class="crud__image">
+    <div class="crud__box-image">
+      <img src="crud_4_pages/books_edit_data_1.png" class="crud__image">
+    </div>
   </div>
   <div class="crud__box">
     <h2 class="crud__headline">show</h2>
