--- a/_figures/assets/model/migration_how_to_make_db.html
+++ b/_figures/assets/model/migration_how_to_make_db.html
@@ -60,7 +60,7 @@ end
     </div>
     <div class="box__flex-column">
       <div class="db__question">
-        では、migrationから実際にDBを作るには<br>どうすればいいでしょう？
+        では、migrationから実際にDBを作るには<br>どうすれば良いでしょうか？
       </div>
     </div>
   </div>
